Only fire live region events on text changes.

This fixes a regression where just clicking on text in some
live regions caused it to announce. The problem was that
we rewrote live region event firing (crrev.com/2957973003)
and made it fire an event it any time a node in a live region
was updated, but we need to limit the scope to only:

* A node with text is added
* A node with text is removed
* A node's text changes

Added some new tests and more Windows test expectations
to cover this, and also manually tested this page to
make sure everything there continues to work:

https://minorninth.github.io/aria-live-region-tests/live_region_tests.html

Bug: 785347
Change-Id: Id6fea0f32695234edbbf1493b7dfa40111e5f6a3
Reviewed-on: https://chromium-review.googlesource.com/772290
Commit-Queue: Dominic Mazzoni <dmazzoni@chromium.org>
Reviewed-by: Aaron Leventhal <aleventhal@chromium.org>
Cr-Commit-Position: refs/heads/master@{#517486}
Former-commit-id: f51324e71030221b7908c7b8b1efe29cee360079